[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/OldWizard.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Skills.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.662745, 0.027451, 0.666667, 1 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.662745, 0.027451, 0.666667, 1 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 1 )

[node name="Skills" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 730.0
margin_top = 772.0
margin_right = 901.0
margin_bottom = 1080.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 30
alignment = 1

[node name="Skill1" type="Button" parent="VBoxContainer"]
margin_top = 38.0
margin_right = 171.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 9 )
custom_styles/focus = SubResource( 3 )
text = "Skill ..."
flat = true

[node name="Skill2" type="Button" parent="VBoxContainer"]
margin_top = 125.0
margin_right = 171.0
margin_bottom = 182.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 7 )
custom_styles/focus = SubResource( 4 )
text = "Skill ..."
flat = true

[node name="Skill3" type="Button" parent="VBoxContainer"]
margin_top = 212.0
margin_right = 171.0
margin_bottom = 269.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 8 )
custom_styles/focus = SubResource( 5 )
text = "Skill ..."
flat = true

[node name="SkillSpec" type="HBoxContainer" parent="."]
visible = false
margin_left = 962.0
margin_top = 893.0
margin_right = 1920.0
margin_bottom = 1015.0
size_flags_horizontal = 3
custom_constants/separation = 0
alignment = 2

[node name="Label" type="Label" parent="SkillSpec"]
margin_right = 457.0
margin_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 2
custom_fonts/font = SubResource( 2 )
text = "Madonna cerbottana..."
align = 1

[node name="Label2" type="Label" parent="SkillSpec"]
margin_left = 457.0
margin_right = 707.0
margin_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 2
custom_fonts/font = SubResource( 2 )
text = "ATKR"
align = 1

[node name="Label3" type="Label" parent="SkillSpec"]
margin_left = 707.0
margin_right = 958.0
margin_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 2
custom_fonts/font = SubResource( 2 )
text = "PP"
align = 1

[connection signal="pressed" from="VBoxContainer/Skill1" to="." method="_on_Skill1_pressed"]
[connection signal="pressed" from="VBoxContainer/Skill2" to="." method="_on_Skill2_pressed"]
[connection signal="pressed" from="VBoxContainer/Skill3" to="." method="_on_Skill3_pressed"]
